examples/test/testpolicy11082.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11082
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key30: value13
      key12: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value44
      podSelector:
        matchLabels:
          key23: value42
          key15: value34
          key7: value32
